src/test/ui/const-generics/parser-error-recovery/issue-89013-type.stderr
error: missing type to the right of `=`
  --> $DIR/issue-89013-type.rs:9:13
   |
LL | impl Foo<N = type 3> for Bar {
   |             ^
   |
help: to constrain the associated type, add a type after `=`
   |
LL | impl Foo<N = TheType type 3> for Bar {
   |              +++++++
help: remove the `=` if `N` is a type
   |
LL - impl Foo<N = type 3> for Bar {
LL + impl Foo<N type 3> for Bar {
   | 

error: expected one of `,`, `>`, a const expression, lifetime, or type, found keyword `type`
  --> $DIR/issue-89013-type.rs:9:14
   |
LL | impl Foo<N = type 3> for Bar {
   |              ^^^^ expected one of `,`, `>`, a const expression, lifetime, or type

error: aborting due to 2 previous errors

